syntax = "proto3";

option go_package = "github.com/pastelnetwork/gonode/proto/supernode";

package supernode;
import "common_sn.proto";

// this proto defines GRPC methods that SN uses to talk to another SNs during Sense Registration

service RegisterCollection {
  // Session informs primary supernode about its `nodeID` and `sessID` it wants to connect to.
  // The stream is used by the parties to inform each other about the cancellation of the task.
  rpc Session(stream SessionRequest) returns (stream SessionReply);

  // SendSenseTicketSignature send signature from supernodes mn2/mn3 for given reg NFT session id to primary supernode
  rpc SendCollectionTicketSignature(SendTicketSignatureRequest) returns (SendTicketSignatureReply);
}
